--- a/memecargame.html
+++ b/memecargame.html
@@ -11,7 +11,20 @@
 
 	<body>
 	
+</script>
 
+
+<h2>Free MEMES!!!</h2>
+
+<p>MEMES!!!</p>
+
+<button onclick="myFunction()">Memes Button</button>
+
+<script>
+function myFunction() {
+    location.replace("https://www.google.com/search?q=memes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjU___278rdAhUDHTQIHWkFAOUQ_AUIDigB&biw=1200&bih=723#imgrc=og2cGDJc14zaxM:")
+}
+</script>
 
 </body>
 
