--- a/memecargame.html
+++ b/memecargame.html
@@ -11,12 +11,10 @@
 
 	<body>
 	
-</script>
 
+<h2>Start</h2>
 
-<h2>Free MEMES!!!</h2>
-
-<p>MEMES!!!</p>
+<p>Click Button to Start Game</p>
 
 <button onclick="myFunction()">Memes Button</button>
 
