--- a/memecargame.html
+++ b/memecargame.html
@@ -16,7 +16,7 @@
 
 <p>Click Button to Start Game</p>
 
-<button onclick="myFunction()> Start </button>
+<button onclick="myFunction()">Start </button>
 
 <script>
 function myFunction() {
