--- a/memecargame.html
+++ b/memecargame.html
@@ -12,7 +12,7 @@
 	<body>
 	
 
-<a> href="https://www.w3schools.com/Html/tryit.asp?filename=tryhtml_links_w3schools"> hi </a>	
+<a href="https://www.w3schools.com/Html/tryit.asp?filename=tryhtml_links_w3schools"> hi </a>	
 
 
 <h2>Start</h2>
