Testing hyperlink button

--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	
+	Welcome to Our Personality quiz! Yay!
 
 	
 	</head>
-	
-
-
-
 	<body>
-	
+	<p> Here is our first question! </p>
+ 
 
-<a href="Creepy.html"> hi </a>	
+ <p>   
+Which Would You Prefer?
 
-
-<h2>Start</h2>
-
-<p>Click Button to Start Game</p>
-
-<button onclick="myFunction()">Start </button>
+<button onclick="myFunction()">Memes Button</button>
 
 <script>
 function myFunction() {
     location.replace("https://www.google.com/search?q=memes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjU___278rdAhUDHTQIHWkFAOUQ_AUIDigB&biw=1200&bih=723#imgrc=og2cGDJc14zaxM:")
 }
 </script>
+
+ </p>
+
+
+
 
 </body>
 
