Added 2nd button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ Which Would You Prefer?
 </p>
 
 <p>
-	
-<button onclick="myFunction()">Memes Button</button>
+
+<button onclick="myFunction()">The Color Green</button>
 
 <script>
 function myFunction() {
@@ -26,7 +26,18 @@ function myFunction() {
 
  </p>
 
+<p>
+	
+<button onclick="myFunction()">The Color Black</button>
 
+<script>
+function myFunction() {
+    location.replace("https://www.google.com/search?q=memes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjU___278rdAhUDHTQIHWkFAOUQ_AUIDigB&biw=1200&bih=723#imgrc=og2cGDJc14zaxM:")
+}
+</script>
+
+
+</p>
 
 
 </body>
