--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@ function myFunction() {
 
 </p>
 
+<p>
+	
+<button onclick="myFunction()">Orange</button>
+
+<script>
+function myFunction() {
+    location.replace("https://www.google.com/search?q=memes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjU___278rdAhUDHTQIHWkFAOUQ_AUIDigB&biw=1200&bih=723#imgrc=og2cGDJc14zaxM:")
+}
+</script>
+
+
+
+</p>
+
+
 
 </body>
 
