--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function myFunction() {
 
 <p>
 	
-<button onclick="myFunction()">Orange</button>
+<button onclick="myFunction()">The Color Orange</button>
 
 <script>
 function myFunction() {
