Change HyperLink on Black

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function myFunction() {
 
 <script>
 function myFunction() {
-    location.replace("https://www.google.com/search?q=memes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjU___278rdAhUDHTQIHWkFAOUQ_AUIDigB&biw=1200&bih=723#imgrc=og2cGDJc14zaxM:")
+    location.replace("Creepy.html")
 }
 </script>
 
