--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Which Would You Prefer?
 
 <script>
 function myFunction() {
-    location.replace("Creepy.html")
+    location.replace("serious.html")
 }
 </script>
 
