Creating all accurate hyperlinks on index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function myFunction() {
 
 <script>
 function myFunction() {
-    location.replace("Creepy.html")
+    location.replace("liteAndFunny.html")
 }
 </script>
 
