Fixes hyperlink bug

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ function myFunction() {
 
 
 <p>
-<button onclick="myFunction()">The Color Black</button>
+<button onclick="myFunction2()">The Color Black</button>
 
 <script>
-function myFunction() {
+function myFunction2() {
     location.replace("Creepy.html")
 }
 </script>
@@ -41,10 +41,10 @@ function myFunction() {
 
 <p>
 	
-<button onclick="myFunction()">The Color Orange</button>
+<button onclick="myFunction3()">The Color Orange</button>
 
 <script>
-function myFunction() {
+function myFunction3() {
     location.replace("liteAndFunny.html")
 }
 </script>
