--- a/Creepy.html
+++ b/Creepy.html
@@ -2,4 +2,17 @@
 
 <head> Welcome to The Creepy Questions Center! </head>
 
-<body> Hello</body>
+<body> <p> Hello... We Have some questions for you.... </p>
+
+<p> First <br> <br> would you rather
+
+
+
+
+
+
+
+
+
+
+</body>
