--- a/Creepy.html
+++ b/Creepy.html
@@ -4,12 +4,21 @@
 
 <body> <p> Hello... We Have some questions for you.... </p>
 
-<p> First <br> <br> would you rather
+<p> First <br> 
 
+	Would You Rather Have an Old Man Shakely Touch Your Face For 30 Minutes or Hide in Your Friends closet for 24 hours and see/overhear some private things...
 
+</p>
 
+<p>
 
+<button onclick="myFunctionCreepy()">Old Man</button>
 
+<script>
+function myFunctionCreepy() {
+    location.replace("serious.html")
+}
+</script>
 
 
 
