--- a/Creepy.html
+++ b/Creepy.html
@@ -16,7 +16,7 @@
 
 <script>
 function myFunctionCreepy() {
-    location.replace("serious.html")
+    location.replace("Creepy1.html")
 }
 </script>
 
