--- a/Creepy.html
+++ b/Creepy.html
@@ -20,7 +20,17 @@ function myFunctionCreepy() {
 }
 </script>
 
+</p>
 
+<p>
+
+<button onclick="myFunctionCreepy()">The Color Green</button>
+
+<script>
+function myFunctionCreepy() {
+    location.replace("Creepy1.html")
+}
+</script>
 
 
 
