--- a/Creepy.html
+++ b/Creepy.html
@@ -24,7 +24,7 @@ function myFunctionCreepy() {
 
 <p>
 
-<button onclick="myFunctionCreepy()">The Color Green</button>
+<button onclick="myFunctionCreepy()">Closet</button>
 
 <script>
 function myFunctionCreepy() {
@@ -35,3 +35,5 @@ function myFunctionCreepy() {
 
 
 </body>
+
+</html>
