Light and funny updates

--- a/liteAndFunny.html
+++ b/liteAndFunny.html
@@ -2,8 +2,35 @@
 
 <html> 
 
+<head>     </head>
 
+<body> <p>    </p>
 
+<p>
+
+<button onclick="myFunctionlightAndFunny()">Old Man</button>
+
+<script>
+function myFunctionlightAndFunny() {
+    location.replace("Creepy1.html")
+}
+</script>
+
+</p>
+
+<p>
+
+	<button onclick="myFunctionCreepy()">Old Man</button>
+
+<script>
+function myFunctionCreepy() {
+    location.replace("Creepy1.html")
+}
+</script>
+
+</p>
+
+</body>
 
 </html>
 
