--- a/Creepy1.html
+++ b/Creepy1.html
@@ -16,3 +16,21 @@ function myFunctionCreepy1() {
     location.replace("Creepy2.html")
 }
 </script>
+
+</p>
+
+<p>
+
+	<button onclick="myFunctionCreepy1()">The Color Green</button>
+
+<script>
+function myFunctionCreepy1() {
+    location.replace("Creepy2.html")
+}
+</script>
+
+</p>
+
+</body>
+
+</html>
