Light AND Funny UPDATES

--- a/liteAndFunny.html
+++ b/liteAndFunny.html
@@ -2,13 +2,13 @@
 
 <html> 
 
-<head>     </head>
+<head> WELCOME TO LIGHTANDFUNNY ;) </head>
 
-<body> <p>    </p>
+<body> <p>  Would you rather save Kermit or Obama?  </p>
 
 <p>
 
-<button onclick="myFunctionlightAndFunny()">Old Man</button>
+<button onclick="myFunctionlightAndFunny()">Kermit</button>
 
 <script>
 function myFunctionlightAndFunny() {
@@ -20,7 +20,7 @@ function myFunctionlightAndFunny() {
 
 <p>
 
-	<button onclick="myFunctionCreepy()">Old Man</button>
+	<button onclick="myFunctionlightAndFunny()">Obama</button>
 
 <script>
 function myFunctionCreepy() {
