--- a/serious.html
+++ b/serious.html
@@ -7,6 +7,17 @@
 		
 		<p>Would you rather eat only food you hate for the rest of your life, or would you rather never eat your favorite food ever again?</p>
 
+		<button onclick="myFunctionSerious()">Eat only the food you hate.</button>
+
+		<button onclick="myFunctionSerious()">Never eat your favorite food again.</button>
+
+<script>
+function myFunctionSerious() {
+    location.replace("Serious1.html")
+}
+</script>
+
+
 		<p>Do you like thick soup or liquidy soup?</p>
 
 		<p>Would you rather only learn the subject you hate for 10 years, or have to go to school with people you hate for 20 years?</p>
