light and funny 1+2 updates

--- a/lightAndFunny.html
+++ b/lightAndFunny.html
@@ -12,7 +12,7 @@
 
 <script>
 function myFunctionlightAndFunny() {
-    location.replace("Creepy1.html")
+    location.replace("lightAndFunny2.html")
 }
 </script>
 
@@ -24,7 +24,7 @@ function myFunctionlightAndFunny() {
 
 <script>
 function myFunctionCreepy() {
-    location.replace("Creepy1.html")
+    location.replace("lightAndFunny2.html")
 }
 </script>
 
