--- a/Creepy2.html
+++ b/Creepy2.html
@@ -2,18 +2,18 @@
 
 <head> Third Question! </head>
 
-<body> <p> Would You Rather Hide in your favorite teachers house for 24 hours (they currently teach you but cant give you any consequences) or 
+<body> <p> Would You Rather Hide in your favorite teachers house for 24 hours (they currently teach you and can give consequences) or take a shower with the whole world watching
 
 </p>
 
 
 <p>
 
-	<button onclick="myFunctionCreepy1()">Braid Hair</button>
+	<button onclick="myFunctionCreepy2()">Shower</button>
 
 <script>
-function myFunctionCreepy1() {
-    location.replace("Creepy2.html")
+function myFunctionCreepy2() {
+    location.replace("Creepy3.html")
 }
 </script>
 
@@ -21,11 +21,11 @@ function myFunctionCreepy1() {
 
 <p>
 
-	<button onclick="myFunctionCreepy1()">The Color Green</button>
+	<button onclick="myFunctionCreepy2()">Hide in Teachers House</button>
 
 <script>
-function myFunctionCreepy1() {
-    location.replace("Creepy2.html")
+function myFunctionCreepy2() {
+    location.replace("Creepy3.html")
 }
 </script>
 
