--- a/Creepy1.html
+++ b/Creepy1.html
@@ -21,7 +21,7 @@ function myFunctionCreepy1() {
 
 <p>
 
-	<button onclick="myFunctionCreepy1()">The Color Green</button>
+	<button onclick="myFunctionCreepy1()">Bugged out House</button>
 
 <script>
 function myFunctionCreepy1() {
