--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function myFunction2() {
 
 <script>
 function myFunction3() {
-    location.replace("liteAndFunny.html")
+    location.replace("lightAndFunny.html")
 }
 </script>
 
