Formatting Serious1.html

--- a/serious1.html
+++ b/serious1.html
@@ -1,2 +1,37 @@
-<DOCTYPE html!>
-<
+
+<html> 
+
+<head>  </head>
+
+<body> <p> 
+
+</p>
+
+
+<p>
+
+	<button onclick="myFunctionSerious1()"> </button>
+
+<script>
+function myFunctionSerious1() {
+    location.replace("Creepy3.html")
+}
+</script>
+
+</p>
+
+<p>
+
+	<button onclick="myFunctionSerious1()"> </button>
+
+<script>
+function myFunctionSerious1() {
+    location.replace("Creepy3.html")
+}
+</script>
+
+</p>
+
+</body>
+
+</html>
