Finishing touches on format for serious1.html (Ready to be filled in)

--- a/serious1.html
+++ b/serious1.html
@@ -14,7 +14,7 @@
 
 <script>
 function myFunctionSerious1() {
-    location.replace("Creepy3.html")
+    location.replace(" ")
 }
 </script>
 
@@ -26,7 +26,7 @@ function myFunctionSerious1() {
 
 <script>
 function myFunctionSerious1() {
-    location.replace("Creepy3.html")
+    location.replace(" ")
 }
 </script>
 
