--- a/index.html
+++ b/index.html
@@ -53,11 +53,48 @@ function myFunction3() {
 
 </p>
 
+<p>
 
+	The Awesome Creators:
+
+</p>
+
+<p>
+
+	<button onclick="myFunctionRoshan()">Roshan</button>
+
+<script>
+function myFunctionRoshan() {
+    location.replace(" ")
+}
+</script>
+
+</p>
+
+<p>
+
+	<button onclick="myFunctionMariam()">Mariam</button>
+
+<script>
+function myFunctionMariam() {
+    location.replace(" ")
+}
+</script>
+
+</p>
+
+<p>
+
+<button onclick="myFunctionSerious1()"> </button>
+
+<script>
+function myFunctionSerious1() {
+    location.replace(" ")
+}
+</script>
+
+</p>
 
 </body>
-
-
-
 
 </html>
