Added CSS to Index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	
+<style> 
+
+body {background-color: darkblue;}
+
+h1 {color: red; 
+text-align: center;} 
+
+p {font-family: Courier; font-size: 20px; text-align: center;}
+
+</style>
+
+
+	<h1>
 	Welcome to Our Personality quiz! Yay!
 
 	
-	</head>
+	</h1>
 	<body>
 	<p> Here is our first question! </p>
  
