Added CSS to All creepy files

--- a/Creepy2.html
+++ b/Creepy2.html
@@ -1,8 +1,18 @@
 <html> 
 
-<head> Third Question! </head>
+<style> 
 
-<body> <p> Would You Rather Hide in your favorite teachers house for 24 hours (they currently teach you and can give consequences) or take a shower with the whole world watching
+body {background-color: black;}
+
+h1 {text-align: center; color: white;}
+
+p {font-family: Courier; font-size: 20px; color: white;}
+
+</style>
+
+<h1> Third Question! </h1>
+
+<body> <p> Would You Rather Hide in your favorite teachers house for 24 hours (they currently teach you and can give consequences) or take a shower with the whole world watching?
 
 </p>
 
