--- a/Creepy.html
+++ b/Creepy.html
@@ -1,6 +1,16 @@
 <html> 
 
-<head> Welcome to The Creepy Questions Center! </head>
+<style> 
+
+body {background-color: black;}
+
+h1 {text-align: center; color: white;}
+
+p {font-family: Courier; font-size: 20px; color: white;}
+
+</style>
+
+<h1> Welcome to The Creepy Questions Center! </h1>
 
 <body> <p> Hello... We Have some questions for you.... </p>
 
