--- a/Creepy1.html
+++ b/Creepy1.html
@@ -1,6 +1,16 @@
 <html> 
 
-<head> Second Question! </head>
+<style> 
+
+body {background-color: black;}
+
+h1 {text-align: center; color: white;}
+
+p {font-family: Courier; font-size: 20px; color: white;}
+
+</style>
+
+<h1> Second Question! </h1>
 
 <body> <p> Would You Rather Braid an Old Mans Chest Hair or walk through a House filled with bugs with minimal clothing?
 
