--- a/Creepy3.html
+++ b/Creepy3.html
@@ -1,6 +1,16 @@
 <html> 
 
-<head> Fourth Question! </head>
+<style> 
+
+body {background-color: black;}
+
+h1 {text-align: center; color: white;}
+
+p {font-family: Courier; font-size: 20px; color: white;}
+
+</style>
+
+<h1> Fourth Question! </h1>
 
 <body> <p> Would You Rather Go through a school day in nothing but your underwear or eat a bowl of toenails every day for a month?
 
