New form on index plus a bazillion updates

--- a/index.html
+++ b/index.html
@@ -108,6 +108,41 @@ function myFunctionSerious1() {
 
 </p>
 
+<p>
+
+<form action="creepy.html" target="_blank">
+  <div class="imgcontainer">
+  
+  </div>
+
+  <div class="container">
+    <label for="uname"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="uname" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
+    <button type="submit">Login</button>
+    <label>
+      <input type="checkbox" checked="checked" name="remember"> Remember me
+    </label>
+  </div>
+
+  <div class="container" style="background-color: darkblue">
+   
+    <span class="psw">Forgot <a href="#">password?</a></span>
+  </div>  
+</form>
+
+</p>
+
+
+<p>
+
+Sits to refer to: https://www.w3schools.com/html/html_forms.asp
+
+</p>
+
 </body>
 
 </html>
