Designed feedback for creepy+lots of updates+bug fixes

--- a/Creepy3.html
+++ b/Creepy3.html
@@ -19,10 +19,10 @@ p {font-family: Courier; font-size: 20px; color: white;}
 
 <p>
 
-	<button onclick="myFunctionCreepy3()">Go to School in underwear</button>
+	<button onclick="myFunctionCreepy31()">Go to School in underwear</button>
 
 <script>
-function myFunctionCreepy3() {
+function myFunctionCreepy31() {
     location.replace("Creepy4.html")
 }
 </script>
@@ -35,7 +35,7 @@ function myFunctionCreepy3() {
 
 <script>
 function myFunctionCreepy3() {
-    location.replace("Creepy4.html")
+    location.replace("feedBack.html")
 }
 </script>
 
