--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@ function myFunction() {
 
 <script>
 function myFunction2() {
-    location.replace("Creepy.html")
+    location.replace("creepy.html")
 }
 </script>
+
 
 
 </p>
