--- a/lightAndFunny.html
+++ b/lightAndFunny.html
@@ -1,6 +1,15 @@
-
-
 <html> 
+
+<style> 
+
+body {background-color: yellow;}
+
+h1 {text-align: center; color: black;}
+
+p {font-family: Arial; font-size: 20px; color: black;}
+
+</style>
+
 
 <head> WELCOME TO LIGHTANDFUNNY ;) </head>
 
