--- a/lightAndFunny.html
+++ b/lightAndFunny.html
@@ -11,7 +11,7 @@ p {font-family: Arial; font-size: 20px; color: black;}
 </style>
 
 
-<head> WELCOME TO LIGHTANDFUNNY ;) </head>
+<h1> WELCOME TO LIGHTANDFUNNY ;) </h1>
 
 <body> <p>  Would you rather save Kermit or Obama?  </p>
 
