Light and Funny update

--- a/lightAndFunny2.html
+++ b/lightAndFunny2.html
@@ -4,9 +4,9 @@
 
 <head> SECOND QUESTION </head>
 
-<body> <p> If animals could talk, </p> </body>
+<body> <p> If animals could talk, which one would be rudest? </p> </body>
 
-
+<p>
 
 
 
