--- a/lightAndFunny2.html
+++ b/lightAndFunny2.html
@@ -4,10 +4,35 @@
 
 <head> SECOND QUESTION </head>
 
-<body> <p> If animals could talk, which one would be rudest? </p> </body>
+<body> <p> If animals could talk, which one would be rudest? </p> 
 
 <p>
 
+<button onclick="myFunctionlightAndFunny()">Cat</button>
+
+<script>
+function myFunctionlightAndFunny() {
+    location.replace("lightAndFunny3.html")
+}
+</script>
+
+</p>
+
+<p>
+
+<button onclick="myFunctionlightAndFunny()">Dog</button>
+
+<script>
+function myFunctionCreepy() {
+    location.replace("lightAndFunny3.html")
+}
+</script>
+
+</p>
+
+</body>
+
+</html>
 
 
 
@@ -32,5 +57,4 @@
 
 
 
-
- </html>
+ 
