--- a/Creepy5(done).html
+++ b/Creepy5(done).html
@@ -10,14 +10,18 @@ p {font-family: Courier; font-size: 20px; color: white;}
 
 </style>
 
+<h1> Congrats! </h1>
+
 <body>
 
 
 <p> Thank you for being an awesome person that tried out our website in beta form! </p>
 
+<p> Now... Which Color do you prefer? </p>
+
 <p>
 
-<button onclick="myFunctionCreepy88()">Stuff pepper up ass</button>
+<button onclick="myFunctionCreepy88()">Orange</button>
 
 <script>
 function myFunctionCreepy88() {
@@ -29,7 +33,7 @@ function myFunctionCreepy88() {
  
 <p>
 
-	<button onclick="myFunctionCreepy88()">Stuff pepper up ass</button>
+	<button onclick="myFunctionCreepy88()">Green</button>
 
 <script>
 function myFunctionCreepy88() {
