--- a/creepy4.html
+++ b/creepy4.html
@@ -23,7 +23,7 @@ p {font-family: Courier; font-size: 20px; color: white;}
 
 <script>
 function myFunctionCreepy31() {
-    location.replace("Creepy4.html")
+    location.replace("Creepy5(done).html")
 }
 </script>
 
@@ -31,11 +31,11 @@ function myFunctionCreepy31() {
 
 <p>
 
-	<button onclick="myFunctionCreepy3()">Cockroaches</button>
+	<button onclick="myFunctionCreepy3()">Cockroaches </button>
 
 <script>
 function myFunctionCreepy3() {
-    location.replace("feedBack.html")
+    location.replace("Creepy5(done).html")
 }
 </script>
 
