--- a/serious1.html
+++ b/serious1.html
@@ -1,20 +1,20 @@
 
 <html> 
 
-<head>  </head>
+<head> Question Two! </head>
 
-<body> <p> 
+<body> <p> Do you like thick soup or liquidy soup?
 
 </p>
 
 
 <p>
 
-	<button onclick="myFunctionSerious1()"> </button>
+	<button onclick="myFunctionSerious1()">Thick</button>
 
 <script>
 function myFunctionSerious1() {
-    location.replace(" ")
+    location.replace("serious1.html")
 }
 </script>
 
@@ -22,11 +22,11 @@ function myFunctionSerious1() {
 
 <p>
 
-	<button onclick="myFunctionSerious1()"> </button>
+	<button onclick="myFunctionSerious1()">Liquidy</button>
 
 <script>
 function myFunctionSerious1() {
-    location.replace(" ")
+    location.replace("serious1.html")
 }
 </script>
 
