--- a/serious4.html
+++ b/serious4.html
@@ -9,3 +9,39 @@ h1 {text-align: center; color: black;}
 p {font-family: Arial; font-size: 20px; color: black;}
 
 </style>
+
+
+<h1> Question Four! </h1>
+
+<body> <p> Would you rather not know who you are your entire life, or know who you are and die young?
+
+</p>
+
+
+<p>
+
+	<button onclick="myFunctionSerious1()">Not know who you are</button>
+
+<script>
+function myFunctionSerious1() {
+    location.replace("serious3.html")
+}
+</script>
+
+</p>
+
+<p>
+
+	<button onclick="myFunctionSerious1()">Die Young</button>
+
+<script>
+function myFunctionSerious1() {
+    location.replace("serious3.html")
+}
+</script>
+
+</p>
+
+</body>
+
+</html>
