--- a/serious1.html
+++ b/serious1.html
@@ -3,6 +3,16 @@
 
 <head> Question Two! </head>
 
+<style> 
+
+body {background-color: yellow;}
+
+h1 {text-align: center; color: black;}
+
+p {font-family: Arial; font-size: 20px; color: black;}
+
+</style>
+
 <body> <p> Do you like thick soup or liquidy soup?
 
 </p>
