--- a/serious1.html
+++ b/serious1.html
@@ -1,7 +1,6 @@
 
 <html> 
 
-<head> Question Two! </head>
 
 <style> 
 
@@ -12,6 +11,8 @@ h1 {text-align: center; color: black;}
 p {font-family: Arial; font-size: 20px; color: black;}
 
 </style>
+
+<h1> Question Two! </h1>
 
 <body> <p> Do you like thick soup or liquidy soup?
 
