--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ function myFunctionMariam() {
 
 <p>
 
-<button onclick="myFunctionSerious1()"> </button>
+<button onclick="myFunctionSerious1()">Rebecca</button>
 
 <script>
 function myFunctionSerious1() {
