--- a/creepy4.html
+++ b/creepy4.html
@@ -12,7 +12,7 @@ p {font-family: Courier; font-size: 20px; color: white;}
 
 <h1> Fourth Question! </h1>
 
-<body> <p> Would You Rather stuff an open ghost pepper up your butthole or sit in a 10 ft by 10 ft by 10ft box completely naked wiht 200 cockroaches for 24 hours?
+<body> <p> Would You Rather stuff an open ghost pepper up your asshole or sit in a 10 ft by 10 ft by 10ft box completely naked wiht 200 cockroaches for 24 hours?
 
 </p>
 
