--- a/serious.html
+++ b/serious.html
@@ -1,8 +1,20 @@
 <DOCTYPE html!>
 <html>
-	<head>
+	
+<style> 
+
+body {background-color: yellow;}
+
+h1 {text-align: center; color: black;}
+
+p {font-family: Arial; font-size: 20px; color: black;}
+
+</style>
+
+
+	<h1>
 		
-	</head>
+	</h1>
 	<body>
 		
 		<p>Would you rather eat only food you hate for the rest of your life, or would you rather never eat your favorite food ever again?</p>
