--- a/serious4.html
+++ b/serious4.html
@@ -24,7 +24,7 @@ p {font-family: Arial; font-size: 20px; color: black;}
 
 <script>
 function myFunctionSerious1() {
-    location.replace("serious4.html")
+    location.replace("serious5(done).html")
 }
 </script>
 
@@ -36,7 +36,7 @@ function myFunctionSerious1() {
 
 <script>
 function myFunctionSerious1() {
-    location.replace("serious4.html")
+    location.replace("serious5(done).html")
 }
 </script>
 
