--- a/serious4.html
+++ b/serious4.html
@@ -11,20 +11,20 @@ p {font-family: Arial; font-size: 20px; color: black;}
 </style>
 
 
-<h1> Question Four! </h1>
+<h1> Congrats!!! </h1>
 
-<body> <p> Would you rather not know who you are your entire life, or know who you are and die young?
+<body> <p> Now...  One Final question...
 
 </p>
 
 
 <p>
 
-	<button onclick="myFunctionSerious1()">Not know who you are</button>
+	<button onclick="myFunctionSerious666()">Green</button>
 
 <script>
-function myFunctionSerious1() {
-    location.replace("serious5(done).html")
+function myFunctionSerious666() {
+    location.replace("finalGreen.html")
 }
 </script>
 
@@ -32,15 +32,28 @@ function myFunctionSerious1() {
 
 <p>
 
-	<button onclick="myFunctionSerious1()">Die Young</button>
+	<button onclick="myFunctionSerious777()">Black</button>
 
 <script>
-function myFunctionSerious1() {
-    location.replace("serious5(done).html")
+function myFunctionSerious777() {
+    location.replace("finalBlack.html")
 }
 </script>
 
 </p>
+
+<p>
+
+	<button onclick="myFunctionSerious888()">Orange</button>
+
+<script>
+function myFunctionSerious888() {
+    location.replace("finalOrange.html")
+}
+</script>
+
+</p>
+
 
 </body>
 
