--- a/serious3.html
+++ b/serious3.html
@@ -20,7 +20,7 @@ p {font-family: Arial; font-size: 20px; color: black;}
 
 <p>
 
-	<button onclick="myFunctionSerious1()">Cubical Job</button>
+	<button onclick="myFunctionSerious1()">Subject you hate</button>
 
 <script>
 function myFunctionSerious1() {
@@ -32,7 +32,7 @@ function myFunctionSerious1() {
 
 <p>
 
-	<button onclick="myFunctionSerious1()">Paycheck to Paycheck</button>
+	<button onclick="myFunctionSerious1()">friends you hate</button>
 
 <script>
 function myFunctionSerious1() {
@@ -41,6 +41,7 @@ function myFunctionSerious1() {
 </script>
 
 </p>
+
 
 </body>
 
