--- a/final.html
+++ b/final.html
@@ -24,7 +24,7 @@ Which Would You Prefer?
 
 <script>
 function myFunction() {
-    location.replace("serious.html")
+    location.replace("finalGreen.html")
 }
 </script>
 
@@ -36,7 +36,7 @@ function myFunction() {
 
 <script>
 function myFunction2() {
-    location.replace("creepy.html")
+    location.replace("finalBlack.html")
 }
 </script>
 
@@ -50,7 +50,7 @@ function myFunction2() {
 
 <script>
 function myFunction3() {
-    location.replace("lightAndFunny.html")
+    location.replace("finalOrange.html")
 }
 </script>
 
