--- a/lightAndFunny6(done).html
+++ b/lightAndFunny6(done).html
@@ -14,27 +14,16 @@
 
 <p>
 
-<button onclick="myFunctionlightAndFunny()">orange</button>
+<button onclick="myFunctionlightAndFunny999()">Final Question</button>
 
 <script>
-function myFunctionlightAndFunny() {
-    location.replace("lightAndFunny.html")
+function myFunctionlightAndFunny999() {
+    location.replace("final.html")
 }
 </script>
 
 </p>
 
-<p>
-
-	<button onclick="myFunctionlightAndFunny()">black</button>
-
-<script>
-function myFunctionCreepy() {
-    location.replace("lightAndFunny.html")
-}
-</script>
-
-</p>
 
 </body>
 
