All Known BUG FIXES

--- a/lightAndFunny5.html
+++ b/lightAndFunny5.html
@@ -12,7 +12,7 @@
 
 <script>
 function myFunctionlightAndFunny() {
-    location.replace("lightAndFunny.html")
+    location.replace("lightAndFunny6(done).html")
 }
 </script>
 
@@ -24,7 +24,7 @@ function myFunctionlightAndFunny() {
 
 <script>
 function myFunctionCreepy() {
-    location.replace("lightAndFunny.html")
+    location.replace("lightAndFunny6(done).html")
 }
 </script>
 
