--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 <style> 
 
-body {background-color: darkblue;}
+body {background-color: darkblue; color: white;}
 
 h1 {color: red; 
 text-align: center;} 
