--- a/lightAndFunny3.html
+++ b/lightAndFunny3.html
@@ -2,7 +2,17 @@
 
 <html>
 
-<head> THIRD QUESTION </head>
+<style> 
+
+body {background-color: yellow;}
+
+h1 {text-align: center; color: black;}
+
+p {font-family: Arial; font-size: 20px; color: black;}
+
+</style>
+
+<h1> THIRD QUESTION </h1>
 
 <body> <p>  would you rather slap your self or your future self?  </p>
 
