--- a/feedBack.html
+++ b/feedBack.html
@@ -19,7 +19,7 @@ form {color: white}
 
 <p>
 
-Please Fill Out The Form Accurately.
+Please Fill Out The Form Accurately on Your opinion of this site.
 
 </p>
 
