--- a/lightAndFunny2.html
+++ b/lightAndFunny2.html
@@ -2,7 +2,17 @@
 
 <html>
 
-<head> SECOND QUESTION </head>
+<style> 
+
+body {background-color: yellow;}
+
+h1 {text-align: center; color: black;}
+
+p {font-family: Arial; font-size: 20px; color: black;}
+
+</style>
+
+<h1> SECOND QUESTION </h1>
 
 <body> <p> If animals could talk, which one would be rudest? </p> 
 
