--- a/lightAndFunny5.html
+++ b/lightAndFunny5.html
@@ -2,7 +2,18 @@
 
 <html>
 
-<head> LAST QUESTION </head>
+
+<style> 
+
+body {background-color: yellow;}
+
+h1 {text-align: center; color: black;}
+
+p {font-family: Arial; font-size: 20px; color: black;}
+
+</style>
+
+<h1> LAST QUESTION </h1>
 
 <body> <p>  would you rather be a duck selling "quack"?? </p>
 
