--- a/lightAndFunny6(done).html
+++ b/lightAndFunny6(done).html
@@ -1,14 +1,16 @@
-
-
-
-
-
-
-
-
 <html>
 
-<head> OKAY BYE DONT COME AGAIN </head>
+<style> 
+
+body {background-color: yellow;}
+
+h1 {text-align: center; color: black;}
+
+p {font-family: Arial; font-size: 20px; color: black;}
+
+</style>
+
+<h1> OKAY BYE DONT COME AGAIN </h1>
 
 <body> <p>  now which color? </p>
 
