--- a/serious4.html
+++ b/serious4.html
@@ -20,23 +20,11 @@ p {font-family: Arial; font-size: 20px; color: black;}
 
 <p>
 
-	<button onclick="myFunctionSerious666()">Green</button>
-
-<script>
-function myFunctionSerious666() {
-    location.replace("finalGreen.html")
-}
-</script>
-
-</p>
-
-<p>
-
 	<button onclick="myFunctionSerious777()">Black</button>
 
 <script>
 function myFunctionSerious777() {
-    location.replace("finalBlack.html")
+    location.replace("Creepy.html")
 }
 </script>
 
@@ -48,7 +36,7 @@ function myFunctionSerious777() {
 
 <script>
 function myFunctionSerious888() {
-    location.replace("finalOrange.html")
+    location.replace("lightAndFunny.html")
 }
 </script>
 
