--- a/finalBlack.html
+++ b/finalBlack.html
@@ -10,7 +10,7 @@ p {font-family: Courier; font-size: 20px; color: white;}
 
 </style>
 
-<h1> Congrats! </h1>
+<h1> Congrats! You Finished!</h1>
 
 <body>
 
