--- a/finalOrange.html
+++ b/finalOrange.html
@@ -11,7 +11,7 @@ p {font-family: Arial; font-size: 20px; color: black;}
 </style>
 
 
-<h1> WELCOME TO LIGHTANDFUNNY ;) </h1>
+<h1> WELCOME TO THE END OF LIGHTANDFUNNY ;) </h1>
 
 <body> 
 
