--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
 	
+<head>
+
+<link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
+
 <style> 
 
 body {background-color: darkblue; color: white;}
 
-h1 {color: red; 
-text-align: center;} 
+p  {font-size: 20px;}
 
-p {font-family: Courier; font-size: 20px; text-align: center;}
 
 </style>
 
+</head>
 
-	<h1>
-	Welcome to Our Personality quiz! Yay!
+<body>
 
+	<h1 class="coolWords">Welcome to Our Personality quiz! Yay!</h1>
 	
-	</h1>
-	<body>
-	<p> Here is our first question! </p>
+
+	<p class="coolWords"> Here is our first question! </p>
  
 
- <p>   
+ <p class="coolWords">   
 Which Would You Prefer?
 
 </p>
@@ -73,41 +77,17 @@ function myFunction3() {
 
 </p>
 
-<p>
+<p class="indexp">Roshan</p>
 
-	<button onclick="myFunctionRoshan()">Roshan</button>
 
-<script>
-function myFunctionRoshan() {
-    location.replace(" ")
-}
-</script>
+<p class="indexp">Mariam</p>
+
 
 </p>
 
-<p>
 
-	<button onclick="myFunctionMariam()">Mariam</button>
+<p class="indexp">Rebecca</p>
 
-<script>
-function myFunctionMariam() {
-    location.replace(" ")
-}
-</script>
-
-</p>
-
-<p>
-
-<button onclick="myFunctionSerious1()">Rebecca</button>
-
-<script>
-function myFunctionSerious1() {
-    location.replace(" ")
-}
-</script>
-
-</p>
 
 <p>
 
@@ -138,11 +118,7 @@ function myFunctionSerious1() {
 </p>
 
 
-<p>
 
-Sits to refer to: https://www.w3schools.com/html/html_forms.asp
-
-</p>
 
 </body>
 
