--- a/lightAndFunny5.html
+++ b/lightAndFunny5.html
@@ -15,7 +15,7 @@ p {font-family: Arial; font-size: 20px; color: black;}
 
 <h1> LAST QUESTION </h1>
 
-<body> <p>  would you rather be a duck selling "quack"?? </p>
+<body> <p>  Would you want to be a duck selling "quack"?? </p>
 
 <p>
 
